--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>Svistunov Evgeny</title>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="styles/style.css">
+<link rel="stylesheet" type="text/css" href="style/style.css">
 
 
 </head>
